fix wrong colors for dark/paper inputs

--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -180,9 +180,9 @@ $colors--dark-theme--focus: $color-focus-dark !default;
 $colors--dark-theme--background-default: #262626 !default;
 $colors--dark-theme--background-alt: #202020 !default;
 $colors--dark-theme--background-code: $color-code-background-dark !default;
-$colors--dark-theme--background-inputs: #373737 !default;
-$colors--dark-theme--background-active: #474747 !default;
-$colors--dark-theme--background-hover: #414141 !default;
+$colors--dark-theme--background-inputs: #2f2f2f !default;
+$colors--dark-theme--background-active: #373737 !default;
+$colors--dark-theme--background-hover: #313131 !default;
 $colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--dark-theme--border-default: rgba($colors--dark-theme--text-default, 0.2) !default;
@@ -228,9 +228,9 @@ $colors-dark-theme--tinted-borders: (
 );
 
 // Paper theme (work in progress)
-$colors--paper-theme--background-inputs: #e9e9e9 !default;
-$colors--paper-theme--background-active: #d7d7d7 !default;
-$colors--paper-theme--background-hover: #dddddd !default;
+$colors--paper-theme--background-inputs: #eaeaea !default;
+$colors--paper-theme--background-active: #e0e0e0 !default;
+$colors--paper-theme--background-hover: #e7e7e7 !default;
 
 // Current theme (based on CSS variables)
 // This is a mapping between SCSS variable and it's CSS property equivalent.
